--- a/payment-page-android-java-integration-demo/app/src/main/res/layout/activity_products.xml
+++ b/payment-page-android-java-integration-demo/app/src/main/res/layout/activity_products.xml
@@ -123,10 +123,10 @@
                     ads:layout_constraintStart_toStartOf="parent"
                     ads:layout_constraintTop_toBottomOf="@+id/products">
 
-                    <View
+                    <ImageView
                         android:id="@+id/rectangle_3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="160dp"
+                        android:layout_width="381dp"
+                        android:layout_height="156dp"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
 
@@ -134,7 +134,8 @@
                         ads:layout_constraintEnd_toEndOf="parent"
                         ads:layout_constraintHorizontal_bias="1.0"
                         ads:layout_constraintStart_toStartOf="parent"
-                        ads:layout_constraintTop_toTopOf="parent" />
+                        ads:layout_constraintTop_toTopOf="parent"
+                        ads:srcCompat="@drawable/product2" />
 
                     <TextView
                         android:id="@+id/product_1"
@@ -236,7 +237,7 @@
                     ads:layout_constraintStart_toStartOf="parent"
                     ads:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
-                    <TextView
+                    <ImageView
                         android:id="@+id/rectangle_4"
                         android:layout_width="0dp"
                         android:layout_height="160dp"
@@ -248,7 +249,8 @@
                         ads:layout_constraintEnd_toEndOf="parent"
                         ads:layout_constraintHorizontal_bias="1.0"
                         ads:layout_constraintStart_toStartOf="parent"
-                        ads:layout_constraintTop_toTopOf="parent" />
+                        ads:layout_constraintTop_toTopOf="parent"
+                        ads:srcCompat="@drawable/product1" />
 
                     <TextView
                         android:id="@+id/product_2"
