--- a/payment-page-android-java-integration-demo/app/src/main/res/layout/activity_checkout.xml
+++ b/payment-page-android-java-integration-demo/app/src/main/res/layout/activity_checkout.xml
@@ -379,6 +379,22 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:visibility="gone"
+        android:id="@+id/progressBar_cyclic">
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:minHeight="40dp"
+            android:minWidth="40dp" />
+    </RelativeLayout>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
