simplified frontend android java

--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -93,289 +93,24 @@
             app:layout_constraintTop_toBottomOf="@+id/rectangle_1"
             android:fontFamily="@font/nunito_sans_regular"/>
 
-        <TextView
-            android:id="@+id/products"
-            android:layout_width="200dp"
-            android:layout_height="21dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="20dp"
-            android:gravity="top"
-            android:text="Cart Details"
-            android:textAppearance="@style/products"
-            android:textColor="@color/orange"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.075"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rectangle_2"
-            android:fontFamily="@font/nunito_sans_regular"/>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/rectangle_8"
-            android:layout_width="0dp"
-            android:layout_height="110dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/rectangle_8"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/products" >
-
-            <TextView
-                android:id="@+id/x2"
-                android:layout_width="30dp"
-                android:layout_height="0dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="168dp"
-                android:fontFamily="@font/nunito_sans_regular"
-                android:text="x1"
-                android:textAlignment="viewEnd"
-                android:textAppearance="@style/x1"
-                style="@style/product_1"
-                ads:layout_constraintBottom_toBottomOf="@+id/product_1"
-                ads:layout_constraintStart_toEndOf="@+id/product_1"
-                ads:layout_constraintTop_toTopOf="@+id/product_1"
-                ads:layout_constraintVertical_bias="0.0" />
-
-            <TextView
-                android:id="@+id/product_"
-                android:layout_width="70dp"
-                android:layout_height="19dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="20dp"
-                android:gravity="top"
-                android:text="Product 2"
-                style="@style/product_1"
-                ads:layout_constraintBottom_toBottomOf="parent"
-                ads:layout_constraintStart_toStartOf="parent"
-                android:fontFamily="@font/nunito_sans_regular"/>
-
-            <TextView
-                android:id="@+id/product_1"
-                android:layout_width="70dp"
-                android:layout_height="19dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
-                android:gravity="top"
-                android:text="@string/product_1"
-                style="@style/product_1"
-                android:textColor="@color/textColor"
-
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:fontFamily="@font/nunito_sans_regular"
-                />
-
-            <View
-                android:id="@+id/vector_1"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:background="@drawable/vector1"
-                ads:layout_constraintBottom_toTopOf="@+id/product_"
-                ads:layout_constraintEnd_toEndOf="parent"
-                ads:layout_constraintStart_toStartOf="parent"
-                ads:layout_constraintTop_toBottomOf="@+id/product_1" />
-
-
-
-            <TextView
-                android:id="@+id/x3"
-                android:layout_width="30dp"
-                android:layout_height="0dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="168dp"
-                android:text="x1"
-                android:fontFamily="@font/nunito_sans_regular"
-                android:textAppearance="@style/x1"
-                style="@style/product_1"
-                android:textAlignment="viewEnd"
-                ads:layout_constraintBottom_toBottomOf="@+id/product_"
-                ads:layout_constraintStart_toEndOf="@+id/product_"
-                ads:layout_constraintTop_toTopOf="@+id/product_" />
-
-            <TextView
-                android:id="@+id/some_id1"
-
-                android:layout_width="40dp"
-                android:layout_height="0dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginEnd="16dp"
-                android:text="Rs1"
-                android:fontFamily="@font/nunito_sans_regular"
-                android:textAlignment="viewEnd"
-                style="@style/product_1"
-                android:textAppearance="@style/some_id"
-                ads:layout_constraintBottom_toBottomOf="@+id/x2"
-                ads:layout_constraintEnd_toEndOf="parent"
-                ads:layout_constraintTop_toTopOf="@+id/x2" />
-
-            <TextView
-                android:id="@+id/some_id2"
-                android:layout_width="40dp"
-                android:layout_height="0dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginEnd="16dp"
-                android:text="Rs1"
-                android:fontFamily="@font/nunito_sans_regular"
-                android:textAlignment="viewEnd"
-                android:textAppearance="@style/some_id"
-                style="@style/product_1"
-                ads:layout_constraintBottom_toBottomOf="@+id/x3"
-                ads:layout_constraintEnd_toEndOf="parent"
-                ads:layout_constraintTop_toTopOf="@+id/x3" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <TextView
-            android:id="@+id/amount"
-            android:layout_width="185dp"
-            android:layout_height="21dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="60dp"
-            android:gravity="top"
-            android:text="Amount"
-            android:fontFamily="@font/nunito_sans_regular"
-            android:textAppearance="@style/products"
-            android:textColor="@color/orange"
-            ads:layout_constraintStart_toStartOf="@+id/rectangle_8"
-            ads:layout_constraintTop_toBottomOf="@+id/rectangle_8" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout2"
-            android:layout_width="0dp"
-            android:layout_height="122dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/rectangle_8"
-            ads:layout_constraintEnd_toEndOf="parent"
-            ads:layout_constraintStart_toStartOf="parent"
-            ads:layout_constraintTop_toBottomOf="@+id/amount">
-
-            <TextView
-                android:id="@+id/total_amoun"
-                style="@style/product_1"
-                android:layout_width="100dp"
-                android:layout_height="19dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/nunito_sans_regular"
-                android:gravity="top"
-                android:text="Total Amount"
-                ads:layout_constraintStart_toStartOf="parent"
-                ads:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/some_id"
-                style="@style/product_1"
-                android:layout_width="70dp"
-                android:layout_height="0dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginEnd="16dp"
-                android:fontFamily="@font/nunito_sans_regular"
-                android:text="Rs 2"
-                android:textAlignment="viewEnd"
-                ads:layout_constraintBottom_toBottomOf="@+id/total_amoun"
-                ads:layout_constraintEnd_toEndOf="parent"
-                ads:layout_constraintTop_toTopOf="@+id/total_amoun" />
-
-            <TextView
-                android:id="@+id/total_amoun2"
-                style="@style/product_1"
-                android:layout_width="86dp"
-                android:layout_height="19dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/nunito_sans_regular"
-                android:gravity="top"
-                android:text="Tax"
-                ads:layout_constraintEnd_toEndOf="@+id/total_amoun"
-                ads:layout_constraintHorizontal_bias="0.0"
-                ads:layout_constraintStart_toStartOf="@+id/total_amoun"
-                ads:layout_constraintTop_toBottomOf="@+id/total_amoun" />
-
-            <TextView
-                android:id="@+id/some_id3"
-                style="@style/product_1"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:fontFamily="@font/nunito_sans_regular"
-                android:text="Rs 2"
-                android:textAlignment="viewEnd"
-                ads:layout_constraintBottom_toBottomOf="@+id/total_amoun2"
-                ads:layout_constraintEnd_toEndOf="@+id/some_id"
-                ads:layout_constraintStart_toStartOf="@+id/some_id"
-                ads:layout_constraintTop_toTopOf="@+id/total_amoun2" />
-
-            <TextView
-                android:id="@+id/total_payab"
-                style="@style/product_1"
-                android:layout_width="140dp"
-                android:layout_height="19dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="@font/nunito_sans_regular"
-                android:gravity="top"
-                android:text="Total Payable Amount"
-                ads:layout_constraintBottom_toBottomOf="parent"
-                ads:layout_constraintStart_toStartOf="@+id/total_amoun2" />
-
-            <TextView
-                android:id="@+id/some_id5"
-                style="@style/product_1"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:fontFamily="@font/nunito_sans_regular"
-                android:text="Rs 2"
-                android:textAlignment="viewEnd"
-                ads:layout_constraintBottom_toBottomOf="@+id/total_payab"
-                ads:layout_constraintEnd_toEndOf="@+id/some_id3"
-                ads:layout_constraintStart_toStartOf="@+id/some_id3"
-                ads:layout_constraintTop_toTopOf="@+id/total_payab" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
         <Button
             android:id="@+id/rectangle_9"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_width="372dp"
+            android:layout_height="47dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
             android:background="@drawable/rectangle_4"
-            android:text="Checkout"
             android:fontFamily="@font/nunito_sans_regular"
+            android:text="Open Payment Page"
             android:textAllCaps="false"
+            android:textFontWeight="900"
             ads:layout_constraintBottom_toBottomOf="parent"
             ads:layout_constraintEnd_toEndOf="parent"
+            ads:layout_constraintHorizontal_bias="0.0"
             ads:layout_constraintStart_toStartOf="parent"
-            android:textFontWeight="900"/>
+            ads:layout_constraintTop_toBottomOf="@+id/rectangle_2" />
 
         <ProgressBar
             android:id="@+id/progressBar"
